[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/inimigo/rato/00012.gd" type="Script" id=1]
[ext_resource path="res://assets/inimigo/rato/ratão-(1)_01.png" type="Texture" id=2]
[ext_resource path="res://assets/inimigo/rato/ratão-(1)_03.png" type="Texture" id=3]
[ext_resource path="res://assets/inimigo/rato/ratdead.png" type="Texture" id=4]
[ext_resource path="res://assets/inimigo/rato/ratão-(1)_02.png" type="Texture" id=5]
[ext_resource path="res://assets/inimigo/rato/ratão-(1)_04.png" type="Texture" id=6]
[ext_resource path="res://assets/inimigo/rato/ratão-(1)_05.png" type="Texture" id=7]
[ext_resource path="res://assets/inimigo/rato/ratão-(1)_06.png" type="Texture" id=8]
[ext_resource path="res://tileset/light.png" type="Texture" id=9]
[ext_resource path="res://fonts/base_font.tres" type="DynamicFont" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.5
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.76131
height = 24.9154

[sub_resource type="CircleShape2D" id=3]
radius = 225.676

[sub_resource type="CapsuleShape2D" id=4]
radius = 17.822
height = 20.3509

[sub_resource type="Animation" id=5]
resource_name = "shwo"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -1 ), Vector2( -2, -41 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.9, 0.9 ), Vector2( 0.5, 0.5 ) ]
}

[node name="00012" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
vida = 500
dano_minimo = 25.0
dano_maximo = 30.0
velocidade_de_mov = 2000

[node name="up" type="RayCast2D" parent="."]
position = Vector2( 4.08968e-005, -26 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 1024

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 0, 36 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 1024

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 21, 1.88708e-005 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 1024

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -22, 8.09825e-006 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 1024

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( -6.86038, 19.2961 )
texture = ExtResource( 9 )
texture_scale = 0.05
color = Color( 0.894531, 0.132782, 0.132782, 1 )
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="Sprite"]
position = Vector2( 3.01441, 18.3606 )
texture = ExtResource( 9 )
texture_scale = 0.05
color = Color( 0.894531, 0.132782, 0.132782, 1 )
shadow_enabled = true

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="vision" type="Area2D" parent="."]

[node name="vision" type="CollisionShape2D" parent="vision"]
z_as_relative = false
shape = SubResource( 3 )

[node name="attack_area" type="Area2D" parent="."]

[node name="body" type="CollisionShape2D" parent="attack_area"]
position = Vector2( -0.151556, 6.92007 )
scale = Vector2( 0.993353, 1 )
shape = SubResource( 4 )

[node name="timers" type="Node2D" parent="."]

[node name="dead" type="Timer" parent="timers"]
wait_time = 2.0

[node name="attack_timer" type="Timer" parent="timers"]
process_mode = 0
wait_time = 1.5

[node name="walk" type="Timer" parent="timers"]
wait_time = 2.0
autostart = true

[node name="stop" type="Timer" parent="timers"]
wait_time = 3.0
autostart = true

[node name="attack_mov_change" type="Timer" parent="timers"]
wait_time = 0.2

[node name="patrol_timer" type="Timer" parent="timers"]
autostart = true

[node name="damage_text" type="Node2D" parent="."]

[node name="damage" type="Label" parent="damage_text"]
visible = false
margin_left = -2.0
margin_top = -41.0
margin_right = 13.0
margin_bottom = -25.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "25"

[node name="damage_animation" type="AnimationPlayer" parent="damage_text"]
root_node = NodePath("../damage")
playback_speed = 0.5
anims/shwo = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.4, 0.4 )

[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="timers/dead" to="." method="_on_dead_timeout"]
[connection signal="timeout" from="timers/attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="timers/walk" to="." method="_on_walk_timeout"]
[connection signal="timeout" from="timers/stop" to="." method="_on_stop_timeout"]
[connection signal="timeout" from="timers/attack_mov_change" to="." method="_on_attack_mov_change_timeout"]
[connection signal="timeout" from="timers/patrol_timer" to="." method="_on_patrol_timer_timeout"]
